# cythonplus-articles

./: README.md  pyproject.toml
source/: conf.py
source/a1/: a1.md
source/a1/src/: demo.sh  setup.py
source/a2/: a2.md
source/a2/src/: demo.sh  setup.py
source/a2/src/containers/: containers_v1.pyx  containers_v2.pyx
source/a3/: a3.md
source/a3/src/: demo.sh  setup.py
source/a4/: .gitignore  a4.md
source/a4/src/: bench.txt  demo.sh  setup.py  setup_basic.py
source/a4/src/golomb/: golomb.py  golomb_cyp.pyx
source/a5/: a5.md
source/a5/src/: demo.sh  setup.py
source/a5/src/utils/: demo_utils.pyx
source/a5/src/utils/stdlib/: abspath.pxd  abspath.pyx  formatdate.pxd  formatdate.pyx  list_utils.pxd  list_utils.pyx  parsedate.pxd  parsedate.pyx  regex.pxd  startswith.pxd  startswith.pyx  strip.pxd  strip.pyx
source/a6/: a6.md
source/a6/src/: demo.sh  setup.py
source/a6/src/cypxml/: __init__.py  demo_cypxml.pyx
